--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,22 @@
 Package: frite
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Functions Writing Functions
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@r: person("Christopher", "Peralta", email = "chris99994@gmail.com",
+                  role = c("aut", "cre"))
+Description: This package provides functions that can be used to modify existing functions
+    and write new functions programmatically. It contains functions for adding, removing, 
+    and editing code in functions. Additionally, it contains diagnostic functions to test 
+    your code. 
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports: 
+    assertthat (>= 0.2.0),
+    magrittr (>= 1.5.0),
+    purrr (>= 0.2.4), 
+    tictoc (>= 1.0.0)
+Depends: 
+    R (>= 3.5.0)
+BugReports: https://github.com/visuelledata/frite/issues
+RoxygenNote: 6.0.1
