--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,4 +21,8 @@ Depends:
     R (>= 3.5.0)
 BugReports: https://github.com/visuelledata/frite/issues
 RoxygenNote: 6.0.1
+Suggests:
+    knitr,
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
