--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: frite
 Type: Package
-Title: Functions for Modifiying and Writing Functions
+Title: Functions for Modifying and Writing Functions
 Version: 0.1.0
 Authors@r: person("Christopher", "Peralta", email = "chris99994@gmail.com",
                   role = c("aut", "cre"))
 Description: This package provides functions that can be used to modify existing functions
-    and write new functions programmatically. It contains functions for adding, removing, 
+    and write new functions with code. It contains functions for adding, removing, 
     and editing code in functions. Additionally, it contains diagnostic functions to test 
     your code. 
 License: MIT + file LICENSE
@@ -19,10 +19,11 @@ Imports:
     stringr (>= 1.3.0)
 Depends:
     R (>= 3.5.0)
-BugReports: https://github.com/visuelledata/frite/issues
-RoxygenNote: 6.0.1
 Suggests:
     knitr,
     rmarkdown,
     testthat
 VignetteBuilder: knitr
+URL: https://github.com/visuelledata/frite
+BugReports: https://github.com/visuelledata/frite/issues
+RoxygenNote: 6.0.1
