--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,8 @@ export(line_remove)
 export(list_body)
 export(plot_body)
 export(tictocify)
+importFrom(assertthat,assert_that)
+importFrom(magrittr,"%>%")
+importFrom(purrr,map)
+importFrom(purrr,map2)
+importFrom(purrr,map_lgl)
