--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,11 @@ export(list_body)
 export(plot_body)
 export(tictocify)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,is.number)
 importFrom(magrittr,"%>%")
+importFrom(purrr,is_scalar_character)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_lgl)
+importFrom(tictoc,tic)
+importFrom(tictoc,toc)
